--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <ul>
             <% for (let i=0;i<message.length;i++) { %>
                 <li>
-                    <% let url = "/" + message[i].id; console.log(url);%>
+                    <% let url = "/" + message[i].id; %>
                     <p><%= message[i].text %> <a href="/messages/<%= message[i].id %>"><button>Open</button></a> </p>
                 </li>
             <% }; %>
